# shoot_race

./: .gitignore  README.md  launch_race.sh  run_reference.sh  仿真与裁判系统实现文档.md  陆地组比赛规则.md
devel/: .catkin  local_setup.sh
devel/include/target_detector/: MarkerPixel.h  MarkerPixelArray.h
devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
devel/lib/pkgconfig/: abot_planar_move_plugin.pc  ar_track_alvar.pc  ar_track_alvar_msgs.pc  robot_slam.pc  target_detector.pc
devel/lib/robot_slam/: navigate_node
devel/lib/target_detector/: target_detector_node.py
devel/share/abot_planar_move_plugin/cmake/: abot_planar_move_pluginConfig.cmake
devel/share/ar_track_alvar/cmake/: ar_track_alvarConfig.cmake
devel/share/ar_track_alvar_msgs/cmake/: ar_track_alvar_msgs-msg-paths.cmake  ar_track_alvar_msgsConfig.cmake
devel/share/robot_slam/cmake/: robot_slamConfig.cmake
devel/share/target_detector/cmake/: target_detector-msg-paths.cmake  target_detectorConfig.cmake
install/: .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
install/include/abot_planar_move_plugin/abot_planar_move_plugin/: gazebo_ros_planar_move_fixed.h
install/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
install/lib/pkgconfig/: abot_model.pc  abot_planar_move_plugin.pc  ar_track_alvar.pc  ar_track_alvar_msgs.pc  referee_system.pc  referee_system_race.pc  robot_slam.pc  shoot_sim.pc  shoot_sim_race.pc  target_detector.pc
install/lib/referee_system/: referee_node.py
install/lib/shoot_sim/: shoot_targets_node.py
install/lib/target_detector/: ar_pose_to_pixel_node.py
install/share/abot_model/: package.xml
install/share/abot_model/cmake/: abot_modelConfig.cmake
install/share/abot_model/meshes/: base_link.STL  link_left_w.STL
install/share/abot_model/shoot_race_world/: untitled.dae  untitled副本.dae
install/share/abot_model/urdf/: abot_model.urdf
install/share/abot_planar_move_plugin/cmake/: abot_planar_move_pluginConfig.cmake
install/share/ar_track_alvar/cmake/: ar_track_alvarConfig.cmake
install/share/ar_track_alvar_msgs/cmake/: ar_track_alvar_msgsConfig.cmake
install/share/referee_system/cmake/: referee_systemConfig.cmake
install/share/referee_system_race/: ARRIVAL_TOPIC.md
install/share/referee_system_race/cmake/: referee_system_raceConfig.cmake
install/share/referee_system_race/launch/: referee.launch
install/share/robot_slam/cmake/: robot_slamConfig.cmake
install/share/shoot_sim/cmake/: shoot_simConfig.cmake
install/share/shoot_sim/launch/: shoot_sim.launch  shoot_targets.launch
install/share/shoot_sim_race/: package.xml
install/share/shoot_sim_race/cmake/: shoot_sim_raceConfig.cmake
install/share/shoot_sim_race/launch/: shoot_sim.launch  shoot_targets.launch
install/share/shoot_sim_race/materials/scripts/: wheel_leaf.material
install/share/target_detector/cmake/: target_detectorConfig.cmake
install/share/target_detector/launch/: alvar_detection.launch
install/share/target_detector/msg/: MarkerPixelArray.msg
reference/: MOONSHOT_VISION.md  PARAMETERS.md  moonshot_vision.py  race_params.py  shoot_race_shoot1_only.py  test_moonshot_live.py  test_moonshot_vision.py  test_race_params.py
release/: .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
release/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
release/lib/pkgconfig/: abot_model.pc  abot_planar_move_plugin.pc  ar_track_alvar.pc  ar_track_alvar_msgs.pc  referee_system.pc  robot_slam.pc  shoot_sim.pc  target_detector.pc
release/lib/shoot_sim/: shoot_sim_node.py
release/share/abot_model/cmake/: abot_modelConfig.cmake
release/share/abot_model/launch/: display.launch  gazebo_world_2024.launch  gazebo_world_2026.launch  gazebo_world_2026_race.launch  gazebo_world_clean.launch  test_mode.launch
release/share/abot_model/meshes/: link_left_s.STL  link_right_s.STL  link_right_w.STL  shout_link.STL
release/share/abot_model/urdf/: abot_model_ackermann.urdf  abot_model_mecanum.urdf
release/share/abot_model/worlds/: race.world
release/share/abot_planar_move_plugin/cmake/: abot_planar_move_pluginConfig.cmake
release/share/ar_track_alvar/cmake/: ar_track_alvarConfig.cmake
release/share/ar_track_alvar_msgs/cmake/: ar_track_alvar_msgsConfig.cmake
release/share/referee_system/: match_score_report.txt  package.xml
release/share/referee_system/cmake/: referee_systemConfig.cmake
release/share/referee_system/launch/: referee.launch
release/share/referee_system/materials/scripts/: task_board.material
release/share/robot_slam/cmake/: robot_slamConfig.cmake
release/share/shoot_sim/: package.xml
release/share/shoot_sim/cmake/: shoot_simConfig.cmake
release_packages/referee_system_race/: CMakeLists.txt  package.xml
release_packages/shoot_sim_race/: CMakeLists.txt
release_packages/shoot_sim_race/materials/scripts/: fixed_target.material  moving_board.material
scripts/: build_release.sh  create_release_workspace.sh  fix_hector_pose_estimation.sh  generate_release_params.py  generate_shoot_sim_release_params.py  sync_release_packages.py
src/abot_planar_move_plugin/: CMakeLists.txt
src/abot_planar_move_plugin/src/: gazebo_ros_planar_move_fixed.cpp
src/robot_slam/launch/: gmapping.launch  multi_goal.launch  navigation.launch  navigation_gmapping.launch  view_nav.launch
src/robot_slam/launch/include/: amcl.launch.xml  (+2 more)
src/robot_slam/maps/: map.pgm
src/robot_slam/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/robot_slam/rviz/: nav.rviz
src/target_detector/: CMakeLists.txt  package.xml
src/target_detector/launch/: target_detector.launch
src/target_detector/msg/: MarkerPixel.msg
src/target_detector/scripts/: target_detector_node.py
(+24 files in other folders)
