<?xml version="1.0"?>
<package format="2">
  <name>referee_system_race</name>
  <version>0.1.0</version>
  <description>裁判系统保密版：与 referee_system 功能相同，节点为 PyInstaller 打包的二进制可执行文件，无 Python 源码。</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
