<?xml version="1.0"?>
<package format="2">
  <name>target_detector</name>
  <version>0.1.0</version>
  <description>圆环靶心检测：订阅相机图像，霍夫圆变换检测靶心像素坐标</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ar_track_alvar_msgs</exec_depend>

  <export>
  </export>
</package>
