<package format="2">
  <name>shoot_sim</name>
  <version>0.0.1</version>
  <description>Spawn physical projectile spheres from a TF frame in Gazebo.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gazebo_msgs</depend>

  <export>
  </export>
</package>
